# excel-data-pipeline

./: .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  QUERIES.md  README.md  config.example.json  exports.json  pipeline-design-doc.md  pyproject.toml  query-references-plan.md  run.py  settings.json
engine/: export_config.py  exporter.py  loader.py  logger.py  runner.py  settings.py  tester.py  validator.py
engine/tests/: test_export_config.py  test_exporter.py  test_loader.py  test_logger.py  test_runner.py  test_settings.py  test_tester.py  test_validator.py
functions/: _rounding.py  aggregations.py  columns.py  dates.py  filters.py  joins.py  reshaping.py  text.py  transforms.py
functions/tests/: test_aggregations.py  test_columns.py  test_dates.py  test_filters.py  test_joins.py  test_reshaping.py  test_rounding.py  test_text.py  test_transforms.py
queries/activity_hours/: query.py  test.py
queries/activity_hours/testData/: activities.csv  entries.csv  entry_activities.csv  expected_activity_hours.csv
queries/activity_hours/testData/happy_path/: categories.csv  entries.csv  (+1 more)
queries/example/: query.py  test.py
queries/example/testData/: expected_summary.csv  params.csv  sales.csv
queries/region_base/: query.py  test.py
queries/region_base/testData/: expected_region_base.csv  sales.csv
queries/region_summary/: query.py  test.py
queries/region_summary/testData/: expected_region_summary.csv
queries/showcase_customer_margin/: query.py  test.py
queries/showcase_product_margin/: query.py  test.py
queries/showcase_sales_base/: query.py  test.py
(+8 files in other folders)
